modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb"

--- a/セクション4.ipynb
+++ b/セクション4.ipynb
@@ -175,20 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# メタデータ保存用のSparkテーブル\n",
     "spark.sql(\"create database if not exists metadata_tmp\")\n",
@@ -254,27 +243,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ビジネスメタデータをSparkテーブル(sample_metadata)に一度保存してみましょう\n"
+    "# ビジネスメタデータをSparkテーブル(sample_metadata)に一度保存してみましょう\n",
+    "ここからはビジネスメタデータ(data_management_cruch_course.jinko_table)を一度Sparkテーブルに保存していきます。\n",
+    "\n",
+    "ここで確認ですがビジネスメタデータで基本となるのは\n",
+    "1. テーブル定義\n",
+    "2. ビジネス知識（ドメイン知識）\n",
+    "\n",
+    "の２つです。  \n",
+    "今回はこれらを格納するテーブルだと、「table_definition」と「Summary」です。  \n",
+    "最終的にはMysqlに入れますが、講座の都合上sample_metadataテーブルに都度格納をしながら行います。  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
-      "|database_name|table_name     |table_definition                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |sammary                               |selectivity|consistency_flag|frequency_access|\n",
-      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
-      "|             |sample_metadata|CREATE TABLE `metadata_tmp`.`sample_metadata` (\\n  `database_name` STRING,\\n  `table_name` STRING,\\n  `table_definition` STRING,\\n  `sammary` STRING,\\n  `row_num` STRING,\\n  `selectivity` STRING,\\n  `consistency_flag` STRING,\\n  `frequency_access` STRING,\\n  `kenmei` STRING)\\nUSING parquet\\nPARTITIONED BY (kenmei)\\nLOCATION 'file:/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/metadata_tmp.db/sample_metadata'\\nTBLPROPERTIES (\\n  'transient_lastDdlTime' = '1637499359')\\n|一旦テーブルの説明は空にしておきます。|null       |null            |null            |\n",
-      "+-------------+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------+-----------+----------------+----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from pyspark.sql.types import LongType, StructType, StructField, StringType, Row\n",
@@ -282,7 +267,7 @@
     "from pyspark.sql.functions import when\n",
     "\n",
     "# 横着をして Spark経由でテーブル定義を取得します\n",
-    "table_def=spark.sql(\"\"\" show create table metadata_tmp.sample_metadata \"\"\").collect()[0].asDict()['createtab_stmt']\n",
+    "table_def=spark.sql(\"\"\" show create table data_management_cruch_course.jinko_table \"\"\").collect()[0].asDict()['createtab_stmt']\n",
     "\n",
     "# カラム名、型、Null OKか否かで設定していきます\n",
     "struct = StructType([\n",
@@ -296,12 +281,12 @@
     "    StructField(\"frequency_access\", StringType(), True)\n",
     "])\n",
     "\n",
-    "df = spark.createDataFrame([(None,None,None,None,None,None,None)], struct)\n",
+    "df = spark.createDataFrame([(None,None,None,None,None,None,None,None)], struct)\n",
     "#今回は一個づつ値を設定していくので少しトリッキーにデータフレームの値を更新していきマス。\n",
     "\n",
     "# メタデータ取得対象の\n",
-    "df2 = df.withColumn(\"database_name\", when(df.database_name.isNull() ,\"\").otherwise(df.database_name))\n",
-    "df2 = df2.withColumn(\"table_name\", when(df.table_name.isNull() ,\"sample_metadata\").otherwise(df.table_name))\n",
+    "df2 = df.withColumn(\"database_name\", when(df.database_name.isNull() ,\"data_management_cruch_course\").otherwise(df.database_name))\n",
+    "df2 = df2.withColumn(\"table_name\", when(df.table_name.isNull() ,\"jinko_table\").otherwise(df.table_name))\n",
     "df2 = df2.withColumn(\"table_definition\", when(df.table_definition.isNull() ,table_def).otherwise(df.table_definition))\n",
     "df2 = df2.withColumn(\"sammary\", when(df.sammary.isNull() ,\"一旦テーブルの説明は空にしておきます。\").otherwise(df.sammary))\n",
     "\n",
@@ -310,24 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AnalysisException",
-     "evalue": "`metadata_tmp`.`sample_metadata` requires that the data to be inserted have the same number of columns as the target table: target table has 9 column(s) but the inserted data has 7 column(s), including 0 partition column(s) having constant value(s).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAnalysisException\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/2q/ffspqcy527ggw9qyccxdymd40000gn/T/ipykernel_57478/693462936.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreateOrReplaceTempView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"sample\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m spark.sql(\"\"\"\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mInsert\u001b[0m \u001b[0moverwrite\u001b[0m  \u001b[0mtable\u001b[0m \u001b[0mmetadata_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample_metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/pyspark/sql/session.py\u001b[0m in \u001b[0;36msql\u001b[0;34m(self, sqlQuery)\u001b[0m\n\u001b[1;32m    721\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mRow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'row3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    722\u001b[0m         \"\"\"\n\u001b[0;32m--> 723\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jsparkSession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlQuery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrapped\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    724\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    725\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtableName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/lib/py4j-0.10.9.2-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1307\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1308\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1309\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1310\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1311\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/opt/apache-spark/libexec/python/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    115\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 117\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mconverted\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    118\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAnalysisException\u001b[0m: `metadata_tmp`.`sample_metadata` requires that the data to be inserted have the same number of columns as the target table: target table has 9 column(s) but the inserted data has 7 column(s), including 0 partition column(s) having constant value(s)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
     "df2.createOrReplaceTempView(\"sample\")\n",
@@ -339,6 +309,17 @@
     "select  * from sample\n",
     "\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 結果の確認をしてみます\n",
+    "\n",
+    "spark.sql(\"select * from metadata_tmp.sample_metadata \").show()"
    ]
   }
  ],
