modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -19,8 +19,7 @@
    "metadata": {},
    "source": [
     "# テクニカルメタデータについて\n",
-    "\n",
-    "データマネジメントとは、"
+    "テクニカルメタデータとは、"
    ]
   },
   {
@@ -28,45 +27,6 @@
    "metadata": {},
    "source": [
     "# テクニカルメタデータの一種データプロファイリング\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# テクニカルメタデータの一種データプロファイリング"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PySparkでデータプロファイリングをしてみようその２"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PySparkでデータプロファイリングをしてみようその3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# データプロファイリングの結果をMysqlテーブルに格納してみよう\n",
-    "\n",
-    "頑張ればSparkを使って書き込むこともできますが、きれいなPGにはならないのでSparkの機能は使わずにPythonから実行するようにします\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# データ品質"
    ]
   },
   {
@@ -107,6 +67,73 @@
     "\n",
     "\n",
     "# spark.xxxxxと記載することで処理を分散させることが可能です。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# メタデータ取得対象のデータを取得する\n",
+    "# 前のチャプターで「データベース名」「テーブル名」「テーブル定義」「サマリー」を登録したテーブルを取得します\n",
+    "\n",
+    "df=spark.sql(\"select * from  metadata_tmp.sample_metadata\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PySparkでデータプロファイリングをしてみようその１\n",
+    "\n",
+    "データプロファイリングその１では、以下の3つを算出してみます。  \n",
+    "3つのうち件数をrow_num(件数)をメタデータストアに保存していきます。\n",
+    "\n",
+    "- 件数\n",
+    "- 平均\n",
+    "- 合計値\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 簡単に取得できるデータプロファイリングの注意点"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PySparkでデータプロファイリングをしてみようその２"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PySparkでデータプロファイリングをしてみようその3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# データプロファイリングの結果をMysqlテーブルに格納してみよう\n",
+    "\n",
+    "頑張ればSparkを使って書き込むこともできますが、きれいなPGにはならないのでSparkの機能は使わずにPythonから実行するようにします\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# データ品質"
    ]
   }
  ],
