modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション3.ipynb
+++ b/セクション3.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +200,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "|code|                kenmei|gengo|wareki|seireki| chu|    sokei|jinko_male|jinko_female|\n",
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "|  00|                  全国| 平成|     2|   1990|null|123611167|  60696724|    62914443|\n",
+      "|  0A|          人口集中地区| 平成|     2|   1990|null| 78152452|  38564229|    39588223|\n",
+      "|  0B|人口集中地区以外の地区| 平成|     2|   1990|null| 45458715|  22132495|    23326220|\n",
+      "|  01|                北海道| 平成|     2|   1990|null|  5643647|   2722988|     2920659|\n",
+      "|  02|                青森県| 平成|     2|   1990|null|  1482873|    704758|      778115|\n",
+      "|  03|                岩手県| 平成|     2|   1990|null|  1416928|    680197|      736731|\n",
+      "|  04|                宮城県| 平成|     2|   1990|null|  2248558|   1105103|     1143455|\n",
+      "|  05|                秋田県| 平成|     2|   1990|null|  1227478|    584678|      642800|\n",
+      "|  06|                山形県| 平成|     2|   1990|null|  1258390|    607041|      651349|\n",
+      "|  07|                福島県| 平成|     2|   1990|null|  2104058|   1024354|     1079704|\n",
+      "|  08|                茨城県| 平成|     2|   1990|null|  2845382|   1419117|     1426265|\n",
+      "|  09|                栃木県| 平成|     2|   1990|null|  1935168|    962571|      972597|\n",
+      "|  10|                群馬県| 平成|     2|   1990|null|  1966265|    971704|      994561|\n",
+      "|  11|                埼玉県| 平成|     2|   1990|null|  6405319|   3245868|     3159451|\n",
+      "|  12|                千葉県| 平成|     2|   1990|null|  5555429|   2802774|     2752655|\n",
+      "|  13|                東京都| 平成|     2|   1990|null| 11855563|   5969773|     5885790|\n",
+      "|  14|              神奈川県| 平成|     2|   1990|null|  7980391|   4098147|     3882244|\n",
+      "|  15|                新潟県| 平成|     2|   1990|null|  2474583|   1200376|     1274207|\n",
+      "|  16|                富山県| 平成|     2|   1990|null|  1120161|    538640|      581521|\n",
+      "|  17|                石川県| 平成|     2|   1990|null|  1164628|    562684|      601944|\n",
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql.types import StructType, StructField, StringType\n",
     "from pyspark.sql.functions import col\n",
@@ -221,7 +254,7 @@
     "df=spark.read.option(\"multiLine\", \"true\").option(\"encoding\", \"SJIS\") \\\n",
     "    .csv(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/jinko.csv\", header=False, sep=',', inferSchema=False,schema=struct)\n",
     "\n",
-    "data_t=df.filter(\"code!='都道府県コード'\")\n",
+    "data_t=df.filter(\"code!='都道府県コード'\").filter(\"gengo=='平成'\")\n",
     "\n",
     "data_t.show()\n"
    ]
@@ -285,9 +318,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# テーブルにデータを登録します\n",
     "# insertIntoというメソッドがありますが使いづらいのでテンポラリテーブルを作成してそこからselect insert します\n",
@@ -308,9 +357,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "21/11/22 10:34:18 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "21/11/22 10:34:18 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n",
+      "21/11/22 10:34:18 WARN ObjectStore: Failed to get database global_temp, returning NoSuchObjectException\n",
+      "21/11/22 10:34:18 WARN SessionState: METASTORE_FILTER_HOOK will be ignored, since hive.security.authorization.manager is set to instance of HiveAuthorizerFactory.\n",
+      "21/11/22 10:34:18 WARN HiveConf: HiveConf of name hive.internal.ss.authz.settings.applied.marker does not exist\n",
+      "21/11/22 10:34:18 WARN HiveConf: HiveConf of name hive.stats.jdbc.timeout does not exist\n",
+      "21/11/22 10:34:18 WARN HiveConf: HiveConf of name hive.stats.retries.wait does not exist\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+--------+\n",
+      "|  kenmei|count(1)|\n",
+      "+--------+--------+\n",
+      "|神奈川県|      20|\n",
+      "|  大阪府|      20|\n",
+      "|    全国|      20|\n",
+      "|  愛知県|      20|\n",
+      "|  東京都|      20|\n",
+      "|  千葉県|      20|\n",
+      "|  京都府|      20|\n",
+      "|  埼玉県|      20|\n",
+      "|  兵庫県|      20|\n",
+      "|  静岡県|      20|\n",
+      "|  北海道|      20|\n",
+      "|  福岡県|      20|\n",
+      "|  栃木県|      20|\n",
+      "|  広島県|      20|\n",
+      "|  岐阜県|      20|\n",
+      "|  長野県|      20|\n",
+      "|  宮城県|      20|\n",
+      "|  茨城県|      20|\n",
+      "|鹿児島県|      20|\n",
+      "|  三重県|      20|\n",
+      "+--------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# データがしっかり入っているか確認してみましょう\n",
     "spark.sql(\"\"\"\n",
@@ -366,7 +461,11 @@
       "Mon Nov 22 09:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
       "Mon Nov 22 09:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
       "Mon Nov 22 09:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
-      "Mon Nov 22 09:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n"
+      "Mon Nov 22 09:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 10:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 10:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 10:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 10:02:02 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n"
      ]
     }
    ],
