--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -92,7 +92,16 @@
     "\n",
     "- 件数\n",
     "- 平均\n",
-    "- 合計値\n"
+    "- 合計値\n",
+    "\n",
+    "## 件数/平均/合計の使い道\n",
+    "例えば件数はよく、異常な状態を見付けることに使えます。  \n",
+    "例えば、前日までに１０件だったものが急に1000件になったらアラートを鳴らすということにも使えたりします。  \n",
+    "データ基盤は時には何万というテーブルが存在しているため、一つ一つ目で見るのは不可能に近いのが現実です。  \n",
+    "そこで件数のような簡単なチェックを入れておくことでも、テーブル数が増え続けても問題ないデータ基盤を作ることが可能です。  \n",
+    "\n",
+    "一方で、取得しやすいがゆえに何も考えずに取得することは無意味になりますので、しっかりと自身の環境に適用できるかどうかを判断することは大切になります。  \n",
+    "例えば、年齢の合計値はあまり意味を成さないかもしれませんし時と場合によっては、合計を知ることで何か得るものがあるかもしれません。  "
    ]
   },
   {
@@ -101,7 +110,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 簡単に取得できるデータプロファイリングの注意点"
+    "# 件数の取得\n",
+    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
+    "row_num=spark.sql(\"select count(*) as row_num from data_management_cruch_course.jinko_table \")\n",
+    "row_num.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 平均と合計値\n",
+    "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
+    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
+    "sum=spark.sql(\"select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_cruch_course.jinko_table \")\n",
+    "# decimalにcastしないと数値が指数表記になってみづらくなるのでdecimalにしています。\n",
+    "sum.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 平均と合計値\n",
+    "# 今回は平均として、女性と男性の合計値の平均をとっていこうと思います。\n",
+    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
+    "avg=spark.sql(\"select avg(sum) as avg from (select cast(sum(jinko_male)+sum(jinko_femail) as decimal(19, 0)) as sum from data_management_cruch_course.jinko_table) \")\n",
+    "avg.show()"
    ]
   },
   {
