modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -147,7 +147,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PySparkでデータプロファイリングをしてみようその２"
+    "# PySparkでデータプロファイリングをしてみようその２\n",
+    "データプロファリングその２では、以下の２つを算出していきます。\n",
+    "\n",
+    "- カーディナリティ\n",
+    "- セレクティビティ\n",
+    "\n",
+    "# カーディナリティの使い道\n",
+    "カーディナリティはスモールファイル問題やデータスキューネスを発見するための手段としてビッグデータ基盤では使われます。  \n",
+    "データスキューネスとは、データに偏りがある状態を指します。  \n",
+    "\n",
+    "ビッグデータ基盤における偏りやスモールファイルは非常に問題になることがあります。  \n",
+    "例えば、クエリのエラーを多発させたり、データの転送を遅くさせたりするする原因にもなります。  \n",
+    "\n",
+    "スモールファイル問題について詳しく知りたい方は是非以下のコースも受講してみてください。  \n",
+    "https://www.udemy.com/course/python-spark-pyspark/?referralCode=E67BF8B61F65866794EB   \n",
+    "\n",
+    "# セレクティビティの使い道\n",
+    "セレクティビティとは、検索した時に結果が何件返却されるか？というものです  \n",
+    "\n",
+    "セレクティビティは、クエリのしやすさに直結してきます。  \n",
+    "データを探索する際に、重複したデータが出てきたらどうでしょうか(そもそも重複に気付けない可能性がありますが)？  \n",
+    "重複を除く処理をSQLに記載しなければなりませんし、さらには  \n",
+    "最終的な分析結果を間違えることもあります。たとえば、結果が2倍になってしまうかも。  \n",
+    "数億というレコードの中で重複を分析の結果だけ見て判断するというのはできないものです。  \n",
+    "そうなれば、再度モデルの作成仕直しや開発のやり直しをしなければならなくなります。  \n",
+    "\n",
+    "ビッグデータ基盤にはPK（プライマリーキー）のような仕組みを持っているものが少なく、データの重複が多々発生してしまいます。  \n",
+    "\n",
+    "そこでセレクティビティのチェックを行うことによって、重複しているデータを見つけ出し対処を行うことができるのです※。  \n",
+    "\n",
+    "※どのような対処を取るべきなのか？についてはデータ品質管理という方法があります。準備が出来次第別のコースで作成予定です。  "
    ]
   },
   {
