modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -154,7 +154,8 @@
     "- セレクティビティ\n",
     "\n",
     "# カーディナリティの使い道\n",
-    "カーディナリティはスモールファイル問題やデータスキューネスを発見するための手段としてビッグデータ基盤では使われます。  \n",
+    "カーディナリティとはどれだけ値がバラけているかを示す指標です。  \n",
+    "ビッグデータ基盤におけるカーディナリティはスモールファイル問題やデータスキューネスを発見するための手段としてビッグデータ基盤では使われます。  \n",
     "データスキューネスとは、データに偏りがある状態を指します。  \n",
     "\n",
     "ビッグデータ基盤における偏りやスモールファイルは非常に問題になることがあります。  \n",
@@ -181,10 +182,98 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import approx_count_distinct\n",
+    "from pyspark.sql.types import DecimalType\n",
+    "\n",
+    "# カーディナリティとセレクティビティはほぼ同時に出力することができます\n",
+    "# 今回はkenmeiについてかーディなりティを測ってみます\n",
+    "card=spark.sql(\"select * from data_management_cruch_course.jinko_table\")\n",
+    "\n",
+    "cols_cardinality = card.select([(approx_count_distinct(c)/card.count()).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
+    "\n",
+    "cols_cardinality.show() \n",
+    "\n",
+    "# approx(正確さを捨て速度と引き換えに概算値を出してくれるもの)\n",
+    "# 数値が大きければ大きいほど値がバラけています(カーディナリティが高い)。\n",
+    "# 数値が小さければ小さいほど値が同じで値はバラけていません(カーディナリティが低い)。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|cardinaryty_code|cardinaryty_gengo|cardinaryty_wareki|cardinaryty_seireki|cardinaryty_chu|cardinaryty_sokei|cardinaryty_jinko_male|cardinaryty_jinko_femail|cardinaryty_kenmei|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "|            1.00|             1.00|              6.00|               6.00|           0.00|             6.00|                  6.00|                    6.00|              1.00|\n",
+      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
+      "\n",
+      "6.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#　セレクティビティはキーを指定した場合（今回の場合はkenmei）レコードの返却はどれくらいであるかを想定するものです\n",
+    "card=spark.sql(\"select * from data_management_cruch_course.jinko_table where kenmei='東京都'\")\n",
+    "\n",
+    "cols_selctivity = card.select([(approx_count_distinct(c)).cast(DecimalType(38,2)).alias(\"cardinaryty_\"+c) for c in card.columns])\n",
+    "\n",
+    "cols_selctivity.show()\n",
+    "# 表示された結果がおおよその返却結果（件数）になります。\n",
+    "# 今回の結果だと6件ほど返されるテーブルになりそうですね\n",
+    "\n",
+    "\n",
+    "# 今回はパーティションを指定した時を前提にどれくらいの件数が返却されるのかを\n",
+    "cols_selctivity.createOrReplaceTempView(\"tmp\")\n",
+    "list_selectivity=spark.sql(\"\"\"\n",
+    "select \n",
+    "CONCAT(cardinaryty_code, ',', cardinaryty_gengo, ',',cardinaryty_wareki ,',', cardinaryty_seireki,',', cardinaryty_chu,',',cardinaryty_sokei, ',', cardinaryty_jinko_male,',',cardinaryty_jinko_femail,',',cardinaryty_kenmei)\n",
+    " as concat from tmp\n",
+    "\"\"\"\n",
+    ").collect()[0].asDict()['concat'].split(',')\n",
+    "\n",
+    "#調べた結果として最大値を機械的に取得して格納しておきます（サイトにメタデータテーブルに格納します。）\n",
+    "cols_selctivity_max=max(list_selectivity)\n",
+    "print(cols_selctivity_max)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PySparkでデータプロファイリングをしてみようその3"
+    "# 結果から考察してみる\n",
+    "この結果を用いてどう考えるか？というところです。  \n",
+    "現在は「kenmei」をパーティションにしています。\n",
+    "\n",
+    "パーティションは多すぎてもいけませんし、少なすぎてもいけません。\n",
+    "この場合「cardinaryty_jinko_male」などでパーティションを切ってしまうとパーティションが多くなってしまいますし、一方で「cardinaryty_gengo」でパーティションを切るとデータが一つのパーティションに入り込んでしまいます。\n",
+    "\n",
+    "そのように考えると「cardinaryty_kenmei」は多くもなく少なくもないちょうどいいカーディナリティであることがわかります。\n",
+    "\n",
+    "セレクティビティに関してはパーティション唯一に絞ることはできないものの、県ごとに西暦が6年分記録されているようですね。  \n",
+    "特にプライマリーキー(ビッグデータ基盤ではUUIDであることが多い)などをセレクティビティチェックした時にレコードが複数帰ってくる場合はどこかの経路で何か間違えているということになります。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PySparkでデータプロファイリングをしてみようその3\n",
+    "データプロファイリング３では、コンシステンシーについて考えてみたいと思います。\n",
+    "コンシステンシーとは一貫性があるかないかという指標です。\n",
+    "\n",
+    "例えばkenmei_codeと今回のjinko_tableを使ってみていきましょう(作成はチャプター３で行っています)"
    ]
   },
   {
@@ -195,6 +284,15 @@
     "\n",
     "頑張ればSparkを使って書き込むこともできますが、きれいなPGにはならないのでSparkの機能は使わずにPythonから実行するようにします\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 結果を格納しよう\n",
+    "決して綺麗な入れ方ではありませんがここでも結果を格納してみましょう。\n",
     "\n"
    ]
   },
